--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -122,6 +122,25 @@
             <div class="float-right copyright">
                 <p>{{ 'All rights must be reserved' | trans }} <br />&copy; <a href="http://anyx.me">anyx</a> {{ "now"|date("Y") }}</p>
             </div>
-        </footer>            
+        </footer> 
+        <script type="text/javascript">
+            var reformalOptions = {
+                project_id: 89306,
+                project_host: "crosswords.reformal.ru",
+                tab_orientation: "right",
+                tab_indent: "50%",
+                tab_bg_color: "#8a000c",
+                tab_border_color: "#FFFFFF",
+                tab_image_url: "http://tab.reformal.ru/0J7QsdGA0LDRgtC90LDRjyDRgdCy0Y%252FQt9GM/FFFFFF/52dfdb1fcd5efb5a33b73724e785268c/right/1/tab.png",
+                tab_border_width: 1
+            };
+
+            (function() {
+                var script = document.createElement('script');
+                script.type = 'text/javascript'; script.async = true;
+                script.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'media.reformal.ru/widgets/v3/reformal.js';
+                document.getElementsByTagName('head')[0].appendChild(script);
+            })();
+        </script><noscript><a href="http://reformal.ru"><img src="http://media.reformal.ru/reformal.png" /></a><a href="http://crosswords.reformal.ru">Обратная связь</a></noscript>
     </body>
 </html>
