--- a/src/Anyx/CrosswordBundle/Resources/views/Solving/index.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Solving/index.html.twig
@@ -16,7 +16,7 @@
 
 		'@AnyxCrosswordBundle/Resources/public/js/views/View.js'
 		'@AnyxCrosswordBundle/Resources/public/js/views/SolverWord.js'
-        '@AnyxCrosswordBundle/Resources/public/js/views/SuccessSolvedMessage.js'
+        '@AnyxCrosswordBundle/Resources/public/js/views/SuccessSavedMessage.js'
 		'@AnyxCrosswordBundle/Resources/public/js/views/WordDefinition.js'
 		
 		'@AnyxCrosswordBundle/Resources/public/js/presenters/Presenter.js'		
@@ -44,7 +44,7 @@
 					word	: 't-solver-word',
 					definition	: 't-solver-word-definition',
                     successSolved : 't-solver-saving-success',
-                    solveSaved: 't-solver-saving-incorrect'
+                    solveSaved: 't-solver-saving-incorrect',
 				},
                 savePath    : Routing.generate(
                                     'crossword_save_solution',
