--- a/src/Anyx/CrosswordBundle/Resources/public/css/main-page.css
+++ b/src/Anyx/CrosswordBundle/Resources/public/css/main-page.css
@@ -565,6 +565,7 @@ article {
 		line-height: 1.5em;
 		color: #9797a2;
 		margin-top: 0;
+        padding-bottom: 15px;
 	}
 	.intro a {
 		background: #2d9ad3;
