--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -1,6 +1,6 @@
 {% extends '::main.html.twig' %}
 
-{% set title = 'Page not found' | trans %}
+{% set title = 'Internal Server Error' | trans %}
         
 {% block page_title %}
     {{ title }}
