--- a/src/Anyx/CrosswordBundle/Resources/public/css/main.css
+++ b/src/Anyx/CrosswordBundle/Resources/public/css/main.css
@@ -42,6 +42,8 @@ BODY FOOTER {
     margin-top: -130px;
     padding: 20px 10px;
     bottom: 0;
+    position: absolute;
+    width: 100%;
 }
 
 header {
