operngraph, solver words highlight

--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -50,7 +50,15 @@
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
-        </script>        
+        </script>
+
+        {% block opengraph %}
+        <meta property="og:title" content="Редактор кроссвордов" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="{{url("homepage")}}" />
+        <meta property="og:description" content="{{ description }}" />
+        <meta property="og:image" content="{{app.request.scheme}}://{{app.request.httpHost}}{{asset("img/og_logo.png")}}" />
+        {% endblock %}
     </head>
     
     <body>
