--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -148,20 +148,20 @@
 
 			<div class="aside-icon-block" id="aside-technos">
 				<span class="aside-icon"></span>
-				<h3 id="constructor">{%trans%}Constructor{%endtrans%}</h3>
+                <h3 id="constructor"><b>{%trans%}Constructor{%endtrans%}</b></h3>
 				<p>{%trans%}Easy creation and editing crosswords, access managment{%endtrans%}</p>
                 <a href="{{ path('create_crossword')}}">{%trans%}Try{%endtrans%}</a>
 			</div>
 
 			<div class="aside-icon-block" id="aside-features">
 				<span class="aside-icon"></span>
-				<h3>{%trans%}Catalog{%endtrans%}</h3>
+                <h3><b>{%trans%}Catalog{%endtrans%}</b></h3>
 				<p>{%trans%}Search crosswords{%endtrans%}</p>
 			</div>
 
 			<div class="aside-icon-block" id="aside-responsive">
 				<span class="aside-icon"></span>
-				<h3>{%trans%}Analyse{%endtrans%}</h3>
+                <h3><b>{%trans%}Analyse{%endtrans%}</b></h3>
 				<p>{%trans%}Statistic of views and solutions your own crosswords{%endtrans%}</p>
 			</div>
 
