--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -111,7 +111,7 @@
         </div>
         
         <div class="container logo-container">
-            <a href="{{ path('new_crosswords') }}">
+            <a href="{{ path('homepage') }}">
                 <div id="logo"></div>
                 <div id="site-name" class="thin">{%trans%}Crosswords editor{%endtrans%}</div>
             </a>
