--- a/src/Anyx/CrosswordBundle/Resources/public/css/main-page.css
+++ b/src/Anyx/CrosswordBundle/Resources/public/css/main-page.css
@@ -285,7 +285,7 @@ h3 {
 	font-weight: normal;
 	font-size: 1.5em;
 	line-height: 1em;
-	color: #2d9ad3;
+	color: #2E2E36;
 	margin: 0 0 0.5em 0;
 }
 h4 {
