--- a/app/Resources/views/Pages/news.html.twig
+++ b/app/Resources/views/Pages/news.html.twig
@@ -28,7 +28,7 @@
         </p>
         <p>
         Пока идет тестирование и исправление найденных ошибок, нового фунционала не добавлять не планируется, 
-        однако, вы можете повлиять на это! Пишите на в твиттер, или оставляйте своеи пожелания на сайте.
+        однако, вы можете повлиять на это! Пишите в твиттер, или оставляйте своеи пожелания на сайте.
         Мы постараемся всё учесть.
         </p>
         
