--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -109,7 +109,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#intro" title="Purchase template on ThemeForest">
+				<a href="#intro" title="{%trans%}Solution{%endtrans%}">
 					<span id="want-picto">?</span>
 					<strong>{%trans%}Solution{%endtrans%}</strong><br>
 					{%trans%}community crosswords{%endtrans%}
