--- a/src/Anyx/CrosswordBundle/Resources/views/Crossword/new.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Crossword/new.html.twig
@@ -6,6 +6,37 @@
 
 {% block page_title %}{{title| trans}}{% endblock %}
 
+{% block javascripts %}
+	{{ parent() }}
+
+	{% javascripts
+        '@AnyxCrosswordBundle/Resources/public/js/jquery.min.js'
+        '@AnyxCrosswordBundle/Resources/public/js/jquery.tagsinput.js'
+	%}
+	<script type="text/javascript" src="{{ asset_url }}"></script>
+	{% endjavascripts %}
+    <script type="text/javascript">
+        $(function(){
+            $('.j-tags').tagsInput({
+                minChars    : 3,
+                inputClass  : 'input',
+                defaultText : '',
+                width       : null,
+                height      : null
+            });
+        });
+    </script>
+{% endblock %}
+
+{% block stylesheets %}
+	{{ parent() }}
+	{% stylesheets
+		'@AnyxCrosswordBundle/Resources/public/css/jquery.tagsinput.css'
+	%}
+	<link type="text/css" rel="stylesheet" href="{{ asset_url }}" />
+	{% endstylesheets %}
+{% endblock %}
+    
 {% block body %}
 <div class="columns">
     <div class="seven-columns">
